--- a/day2.ipynb
+++ b/day2.ipynb
@@ -329,6 +329,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    " \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
+    "}\n",
+    "\n",
+    "class Website:\n",
+    "    \"\"\"\n",
+    "    A utility class to represent a Website that we have scraped, now with links\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, url):\n",
+    "        self.url = url\n",
+    "        response = requests.get(url, headers=headers)\n",
+    "        self.body = response.content\n",
+    "        soup = BeautifulSoup(self.body, 'html.parser')\n",
+    "        self.title = soup.title.string if soup.title else \"No title found\"\n",
+    "        if soup.body:\n",
+    "            for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
+    "                irrelevant.decompose()\n",
+    "            self.text = soup.body.get_text(separator=\"\\n\", strip=True)\n",
+    "        else:\n",
+    "            self.text = \"\"\n",
+    "        links = [link.get('href') for link in soup.find_all('a')]\n",
+    "        self.links = [link for link in links if link]\n",
+    "\n",
+    "    def get_contents(self):\n",
+    "        return f\"Webpage Title:\\n{self.title}\\nWebpage Contents:\\n{self.text}\\n\\n\"\n",
+    "\n",
+    "system_prompt =\"Youare an assistant to analyze the content of the website and provide insights\"\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stream_brochure(company_name,url,model):\n",
+    "    prompt=f\"Generate a company brochure for {company_name}, with their landing page\"\n",
+    "    prompt+=Website(url).get_contents()\n",
+    "    if model=='GPT':\n",
+    "        result= stream_gpt(prompt)\n",
+    "    else:\n",
+    "        raise ValueError('Unknownmodel') \n",
+    "    for chunk in result:\n",
+    "        yield chunk\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dummy/Downloads/Langchain Projects/1-QnA Chatbot/venv/lib/python3.10/site-packages/gradio/interface.py:399: UserWarning: The `allow_flagging` parameter in `Interface` is deprecated.Use `flagging_mode` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view = gr.Interface(\n",
+    "    fn= stream_brochure,\n",
+    "    inputs=[\n",
+    "        gr.Textbox(label='Company Name: '),\n",
+    "        gr.Textbox(label='Landing page URL'),\n",
+    "        gr.Dropdown(['GPT','Claude'], label='SelectModel')],\n",
+    "    outputs=[gr.Markdown(label='Brochure')],\n",
+    "    allow_flagging='never'    \n",
+    ")\n",
+    "\n",
+    "view.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
