--- a/day3.ipynb
+++ b/day3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -12,145 +12,220 @@
       "/Users/dummy/Downloads/Langchain Projects/1-QnA Chatbot/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
+    "import anthropic\n",
+    "from IPython.display import Markdown, display, update_display\n",
     "import gradio as gr\n",
-    "\n",
-    "load_dotenv()"
+    "import subprocess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
+    "os.environ['ANTHROPIC_API_KEY'] = os.getenv('ANTHROPIC_API_KEY', 'your-key-if-not-using-env')\n",
+    "os.environ['HF_TOKEN'] = os.getenv('HF_TOKEN', 'your-key-if-not-using-env')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "openai = OpenAI()\n",
-    "MODEL ='gpt-4o-mini'\n",
+    "claude = anthropic.Anthropic()\n",
     "\n",
-    "system_message =' You are a chat bot assitant and helps in answering queries'\n"
+    "OPENAI_MODEL = \"gpt-4o-mini\"\n",
+    "CLAUDE_MODEL = \"claude-3-5-sonnet-20240620\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chat(message,history):\n",
-    "    messages = [{'role':'system','content':system_message}]\n",
-    "    for user_message,assistant_message in history:\n",
-    "        messages.append({'role':'user','content':user_message})\n",
-    "        messages.append({'role':'assistant','content':assistant_message})\n",
-    "    messages.append({'role':'user','content':message})\n",
-    "\n",
-    "    # response = openai.ChatCompletion.create(\n",
-    "    #     model = 'gpt-3.5-turbo',\n",
-    "    #     messages = messages\n",
-    "    # )\n",
-    "\n",
-    "    # assistance_response = response['choices'][0]['message']['content']\n",
-    "\n",
-    "    # messages.append({'role':'assistant','content':assistance_response})\n",
-    "\n",
-    "    print('History is ')\n",
-    "    print(history)\n",
-    "    print('andmessage is ')\n",
-    "    print(message)\n",
-    "\n",
-    "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
-    "    \n",
-    "    response =''\n",
-    "    for chunk in stream :\n",
-    "        response+=chunk.choices[0].delta.content or ''\n",
-    "        yield response"
+    "system_message = 'You are an assistant would would replace Python code with C++ code'\n",
+    "system_message+= 'Respond only with C++ code.Use comments sparingly.'\n",
+    "system_message+='C++ code needs to be identical in performance and functionality'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_prompt_for(python):\n",
+    "    user_prompt ='Rewrite python code in the fastest possible way to produce identical output.'\n",
+    "    user_prompt+= 'Respond only with C++ code'\n",
+    "    user_prompt+='pay attendtion to the number types to ensure no int overflow'\n",
+    "    user_prompt+=python\n",
+    "    return user_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def messages_for(python):\n",
+    "    return [\n",
+    "        {'role':'system','content':system_message},\n",
+    "        {'role':'user','content':user_prompt_for(python)}\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_output(cpp):\n",
+    "    code = cpp.replace(\"```cpp\",\"\").replace(\"```\",\"\")\n",
+    "    with open(\"optimized.cpp\", \"w\") as f:\n",
+    "        f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize_gpt(python):    \n",
+    "    stream = openai.chat.completions.create(model=OPENAI_MODEL, messages=messages_for(python), stream=True)\n",
+    "    reply = \"\"\n",
+    "    for chunk in stream:\n",
+    "        fragment = chunk.choices[0].delta.content or \"\"\n",
+    "        reply += fragment\n",
+    "        print(fragment, end='', flush=True)\n",
+    "    write_output(reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize_claude(python):\n",
+    "    result = claude.messages.stream(\n",
+    "        model=CLAUDE_MODEL,\n",
+    "        max_tokens=500,\n",
+    "        system=system_message,\n",
+    "        messages=[{\"role\": \"user\", \"content\": user_prompt_for(python)}],\n",
+    "    )\n",
+    "    reply = \"\"\n",
+    "    with result as stream:\n",
+    "        for text in stream.text_stream:\n",
+    "            reply += text\n",
+    "            print(text, end=\"\", flush=True)\n",
+    "    write_output(reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi = \"\"\"\n",
+    "import time\n",
+    "\n",
+    "def calculate(iterations, param1, param2):\n",
+    "    result = 1.0\n",
+    "    for i in range(1, iterations+1):\n",
+    "        j = i * param1 - param2\n",
+    "        result -= (1/j)\n",
+    "        j = i * param1 + param2\n",
+    "        result += (1/j)\n",
+    "    return result\n",
+    "\n",
+    "start_time = time.time()\n",
+    "result = calculate(100_000_000, 4, 1) * 4\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"Result: {result:.12f}\")\n",
+    "print(f\"Execution Time: {(end_time - start_time):.6f} seconds\")\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dummy/Downloads/Langchain Projects/1-QnA Chatbot/venv/lib/python3.10/site-packages/gradio/components/chatbot.py:248: UserWarning: The 'tuples' format for chatbot messages is deprecated and will be removed in a future version of Gradio. Please set type='messages' instead, which uses openai-style 'role' and 'content' keys.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7874\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7874/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "History is \n",
-      "[]\n",
-      "andmessage is \n",
-      "Hi\n",
-      "History is \n",
-      "[['Hi', 'Hello! How can I assist you today?']]\n",
-      "andmessage is \n",
-      "How are you?\n",
-      "History is \n",
-      "[['Hi', 'Hello! How can I assist you today?'], ['How are you?', \"I don't have feelings, but I'm here and ready to help you! How about you? How are you today?\"]]\n",
-      "andmessage is \n",
-      "I want to buy a phone\n",
-      "History is \n",
-      "[['Hi', 'Hello! How can I assist you today?'], ['How are you?', \"I don't have feelings, but I'm here and ready to help you! How about you? How are you today?\"], ['I want to buy a phone', 'Great! What features are you looking for in a phone? For example, are you interested in a specific brand, camera quality, battery life, or budget? Let me know so I can help you find the best option!']]\n",
-      "andmessage is \n",
-      "16 GB RAM and Samsung phone\n",
-      "History is \n",
-      "[['Hi', 'Hello! How can I assist you today?'], ['How are you?', \"I don't have feelings, but I'm here and ready to help you! How about you? How are you today?\"], ['I want to buy a phone', 'Great! What features are you looking for in a phone? For example, are you interested in a specific brand, camera quality, battery life, or budget? Let me know so I can help you find the best option!'], ['16 GB RAM and Samsung phone', \"If you're looking for a Samsung phone with 16 GB of RAM, you might consider the following options:\\n\\n1. **Samsung Galaxy S23 Ultra**: This flagship model features top-tier specifications, including a powerful camera system, high-quality display, and 16 GB of RAM in certain configurations.\\n\\n2. **Samsung Galaxy Z Fold 4**: If you’re interested in a foldable phone, this device offers a unique form factor along with high performance, including variations with 16 GB of RAM.\\n\\n3. **Samsung Galaxy Note 20 Ultra**: Although older, it may have models or variants that can have 16 GB of RAM, especially if you’re looking for a good balance of features and price.\\n\\nMake sure to check the specific configurations available in your region, as they can vary. If you have a specific budget in mind or need more details about any of these models, let me know!\"]]\n",
-      "andmessage is \n",
-      "Whats special in the 1st option?\n"
+      "Result: 3.141592658589\n",
+      "Execution Time: 8.831092 seconds\n"
      ]
     }
    ],
    "source": [
-    "gr.ChatInterface(fn=chat).launch()"
+    "exec(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```cpp\n",
+      "#include <iostream>\n",
+      "#include <chrono>\n",
+      "#include <iomanip>\n",
+      "\n",
+      "double calculate(long long iterations, double param1, double param2) {\n",
+      "    double result = 1.0;\n",
+      "    for (long long i = 1; i <= iterations; ++i) {\n",
+      "        double j = i * param1 - param2;\n",
+      "        result -= (1.0 / j);\n",
+      "        j = i * param1 + param2;\n",
+      "        result += (1.0 / j);\n",
+      "    }\n",
+      "    return result;\n",
+      "}\n",
+      "\n",
+      "int main() {\n",
+      "    auto start_time = std::chrono::high_resolution_clock::now();\n",
+      "    double result = calculate(100000000LL, 4.0, 1.0) * 4.0;\n",
+      "    auto end_time = std::chrono::high_resolution_clock::now();\n",
+      "    \n",
+      "    std::cout << std::fixed << std::setprecision(12);\n",
+      "    std::cout << \"Result: \" << result << std::endl;\n",
+      "\n",
+      "    std::chrono::duration<double> execution_time = end_time - start_time;\n",
+      "    std::cout << \"Execution Time: \" << execution_time.count() << \" seconds\" << std::endl;\n",
+      "\n",
+      "    return 0;\n",
+      "}\n",
+      "```"
+     ]
+    }
+   ],
+   "source": [
+    "optimize_gpt(pi)"
    ]
   },
   {
